--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html>
     <head>
         <title>document</title>
-        <script src="debug.js" ></script>
-        <!-- <script src="second.js"></script> -->
+        <script type="module" src="index.mjs" ></script>
+        <!-- <script src="second.mjs"></script> -->
     </head>
     <body></body>
 </html>
