--- a/lodash.html
+++ b/lodash.html
@@ -4,7 +4,7 @@
         <title>document</title>
         <script src="https://cdn.jsdelivr.net/npm/lodash@4.17.21/lodash.min.js"></script>
 
-        <script  src="lodash.cjs" ></script>
+        <script  src="lodash1.cjs" ></script>
         <!-- <script src="second.js"></script> -->
     </head>
     <body></body>
