--- a/luxon.html
+++ b/luxon.html
@@ -3,7 +3,7 @@
     <head>
         <title>document</title>
       <script  src='https://cdnjs.cloudflare.com/ajax/libs/luxon/3.3.0/luxon.min.js'></script>
-        <script  src="luxon.js" ></script>
+        <script  src="luxon1.cjs" ></script>
         <!-- <script src="second.js"></script> -->
     </head>
     <body></body>
